created concise title

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,7 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+
+<!---------Added meta viewport to make website responsive ready--------->
+    <meta name="viewport" content="width=device-width initial-scale=1">
+
+<!---------Added a concise and relevant title to improve web accessibility---->
+    <title>Digital Marketing|Website Optimisation|Social Media Marketing-Horisoen</title>
+    
 </head>
 
 <body>
