added comments and changes to css

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -21,7 +21,7 @@
         <h1>Hori<span class="seo">seo</span>n</h1>
 
 <!-------Replace tag div with tag nav-->
-        <tag>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -33,7 +33,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </tag>
+        </nav>
     </header>
 
 <!-----------Replace tag div with tag img and add alt attribute to image-->    
@@ -43,8 +43,9 @@
     <section class="content">
         
 <!-------------Replace tag div with tag article-------->
-<!-----change class to "section-content" to help optimise stylesheet-->        
-        <article class="section-content">
+<!-----change class to "section-content" to help optimise stylesheet-->
+<!--------------------Restored id for link navigation-------->         
+        <article id="search-engine-optimization" class="section-content">
 
             <!------------Add alt for img tag----------->
             <img src="./assets/images/search-engine-optimization.jpg" alt="notebook, coffee mug, laptop, pens on a table top" class="float-left" />
@@ -56,8 +57,9 @@
         </article>
 
 <!-------------Replace tag div with tag article-------->
-<!-----change class to "section-content" to help optimise stylesheet remove id-->         
-        <article class="section-content">
+<!-----change class to "section-content" to help optimise stylesheet remove id-->
+<!------------------------Restored id for link navigation----->          
+        <article id="online-reputation-management" class="section-content">
             <!------------Add alt for img tag----------->
             <img src="./assets/images/online-reputation-management.jpg" alt="employee working on a phone and laptop" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -67,8 +69,9 @@
         </article>
 
 <!-------------Replace tag div with tag article-------->
-<!-----change class to "section-content" to help optimise stylesheet remove id-->          
-        <article class="section-content">
+<!-----change class to "section-content" to help optimise stylesheet remove id-->
+<!------------------------Restored id for link navigation------>         
+        <article id="social-media-marketing" class="section-content">
 
             <!------------Add alt for img tag----------->
             <img src="./assets/images/social-media-marketing.jpg" alt="social media icons on table top" class="float-left" />
