changed link for css and first image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 
     <!---------Added meta viewport to make website responsive ready--->
     <meta name="viewport" content="width=device-width initial-scale=1">
@@ -36,7 +36,7 @@
     </header>
 
     <!--Replaced tag div with tag img and add alt attribute to image-->    
-    <img src="assets/images/digital-marketing-meeting.jpg" alt="Colleagues discussing a project" class="hero">
+    <img src="./assets/images/digital-marketing-meeting.jpg" alt="Colleagues discussing a project" class="hero">
 
      <!--Replaced tag div with tag section-->    
     <section class="content">
